# a-share-animal-index

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  rules.yml
.github/workflows/: daily.yml
data/: changes_20251219.json  constituents_20251219.csv  holdings_20251219.csv  nav.csv
docs/: index.html  latest.json  nav.csv
docs/badges/: hs300_nav.json  zoo_extended_nav.json  zoo_strict_nav.json
src/: redraw_chart.py  run_daily.py
src/zoo_index/: __init__.py  config.py  index.py  matcher.py  outputs.py
src/zoo_index/data_sources/: tushare.py
tests/: test_index.py  test_matcher.py  test_outputs.py  test_rules.py
