[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-animal-index"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "pyarrow",
  "pyyaml",
  "tushare",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.scripts]
zoo-index = "run_daily:main"
zoo-chart = "redraw_chart:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["run_daily", "redraw_chart"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
